deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-rest-api
spec:
  type: ClusterIP
  ports:
    - port: 80 # Puerto que expone el servicio
      targetPort: http # Puerto del contenedor (8080)
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: poc-rest-api # Redirige el tráfico a los pods con esta etiqueta
