deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-rest-api
  annotations:
    # Anotación común para NGINX Ingress Controller.
    # Asegúrate de que tu Ingress Controller la soporte.
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: poc-rest-api.neniel.com # Reemplaza con tu dominio
      http:
        paths:
          - path: /api(/|$)(.*) # Ruta para acceder a la API
            pathType: Prefix
            backend:
              service:
                name: poc-rest-api # Nombre del servicio a exponer
                port:
                  name: http # Puerto del servicio
